--- a/css/style.css
+++ b/css/style.css
@@ -603,6 +603,8 @@ a{text-decoration: none;}
     #main section .cont_box:nth-child(2) .txt_part, #main section .cont_box:nth-child(6) .txt_part, #main section .cont_box:nth-child(7) .txt_part{
         width: 100%;
     }
+    #main section .cont_box:nth-child(11) .txt_part{
+        width: 50%;
+    }
 
-    #main footer{}
     #main footer p{display: block;}
